bitcode: use OFFLOAD_TRIPLE and in-tree SPIR-V backend for LLVM 22+
Pass --target explicitly to add_opencl_bitcode instead of embedding
it in BITCODE_CL_COMPILE_FLAGS. Set version-specific triples
(spirv64v1.2/v1.3-unknown-chipstar) for rtdevlib compilation on
LLVM 22+. Use the in-tree SPIR-V backend via clang for embed_spirv_in_cpp
instead of the external llvm-spirv translator. Set AMDGPU_TARGET_TRIPLE
for ROCm-Device-Libs subdir.

--- a/bitcode/CMakeLists.txt
+++ b/bitcode/CMakeLists.txt
@@ -42,14 +42,14 @@ if("${LLVM_VERSION}" VERSION_LESS 14.0)
 else()
   # HIP-Clang automatically looks for hipspv-<triple>.bc in
   # <bc-destination> directory in HIP compilation mode.
-  set(BC_TRIPLE "spirv64")
+  set(BC_TRIPLE ${OFFLOAD_TRIPLE})
   set(BC_FILE "hipspv-${BC_TRIPLE}.bc")
   set(BC_DESTINATION lib/hip-device-lib)
 endif()
 
 set(BITCODE_CL_COMPILE_FLAGS
   -Xclang -finclude-default-header -O2 -x cl -cl-std=CL2.0
-  -cl-ext=+cl_khr_subgroup --target=${BC_TRIPLE}
+  -cl-ext=+cl_khr_subgroup
   -DDEFAULT_WARP_SIZE=${DEFAULT_WARP_SIZE} -emit-llvm
   ${EXTRA_FLAGS})
 set(BITCODE_C_COMPILE_FLAGS
@@ -60,18 +60,19 @@ set(BITCODE_C_COMPILE_FLAGS
 set(NON_OCML_SOURCES "devicelib" "_cl_print_str" "texture" "malloc") # "printf_support"
 
 # Compiles SOURCE treated as OpenCL to LLVM bitcode.
-function(add_opencl_bitcode SOURCE OUTPUT)
+function(add_opencl_bitcode TARGET SOURCE OUTPUT)
   add_custom_command(
     OUTPUT "${OUTPUT}"
     DEPENDS "${SOURCE}"
     COMMAND "${CMAKE_CXX_COMPILER}" ${BITCODE_CL_COMPILE_FLAGS}
-    -o "${OUTPUT}" -c "${SOURCE}"
+    --target=${TARGET} -o "${OUTPUT}" -c "${SOURCE}"
     COMMENT "Building ${SOURCE}"
     VERBATIM)
 endfunction()
 
 foreach(SOURCE IN LISTS NON_OCML_SOURCES)
   add_opencl_bitcode(
+    ${BC_TRIPLE}
     "${CMAKE_CURRENT_SOURCE_DIR}/${SOURCE}.cl"
     "${CMAKE_CURRENT_BINARY_DIR}/BC/${SOURCE}.bc")
   list(APPEND DEPEND_LIST "${CMAKE_CURRENT_BINARY_DIR}/BC/${SOURCE}.bc")
@@ -82,6 +83,7 @@ set(ROCM_DEVICELIB_STANDALONE_BUILD ON)
 
 set(SAVED_WARN_DEPRECATED ${CMAKE_WARN_DEPRECATED})
 set(CMAKE_WARN_DEPRECATED OFF)
+set(AMDGPU_TARGET_TRIPLE ${BC_TRIPLE})
 add_subdirectory(ROCm-Device-Libs EXCLUDE_FROM_ALL)
 set(CMAKE_WARN_DEPRECATED ${SAVED_WARN_DEPRECATED})
 
@@ -164,13 +166,34 @@ set(RTDEVLIB_SOURCES_v1_2
 set(RTDEVLIB_SOURCES_v1_3
   ballot_native)
 
+# Set rtdevlib compile triples based on LLVM version.
+# For LLVM >= 22, use chipstar triples (requires chipstar OS patch).
+# For LLVM < 22, use BC_TRIPLE (spirv64 for old offload driver).
+if(LLVM_VERSION_MAJOR GREATER_EQUAL 22)
+  set(RTDEVLIB_TRIPLE_v1_2 spirv64v1.2-unknown-chipstar)
+  set(RTDEVLIB_TRIPLE_v1_3 spirv64v1.3-unknown-chipstar)
+else()
+  set(RTDEVLIB_TRIPLE_v1_2 ${BC_TRIPLE})
+  set(RTDEVLIB_TRIPLE_v1_3 ${BC_TRIPLE})
+endif()
+
 # Alias for add_opencl_bitcode.
-foreach(SOURCE IN LISTS RTDEVLIB_SOURCES_v1_2 RTDEVLIB_SOURCES_v1_3)
- add_opencl_bitcode(
-   "${CMAKE_CURRENT_SOURCE_DIR}/${SOURCE}.cl"
-   "${CMAKE_CURRENT_BINARY_DIR}/${SOURCE}.bc")
- list(APPEND RTDEVLIB_BITCODES "${CMAKE_CURRENT_BINARY_DIR}/${SOURCE}.bc")
+foreach(SOURCE IN LISTS RTDEVLIB_SOURCES_v1_2)
+  add_opencl_bitcode(
+    ${RTDEVLIB_TRIPLE_v1_2}
+    "${CMAKE_CURRENT_SOURCE_DIR}/${SOURCE}.cl"
+    "${CMAKE_CURRENT_BINARY_DIR}/${SOURCE}.bc")
+  list(APPEND RTDEVLIB_BITCODES "${CMAKE_CURRENT_BINARY_DIR}/${SOURCE}.bc")
 endforeach()
+
+foreach(SOURCE IN LISTS RTDEVLIB_SOURCES_v1_3)
+  add_opencl_bitcode(
+    ${RTDEVLIB_TRIPLE_v1_3}
+    "${CMAKE_CURRENT_SOURCE_DIR}/${SOURCE}.cl"
+    "${CMAKE_CURRENT_BINARY_DIR}/${SOURCE}.bc")
+  list(APPEND RTDEVLIB_BITCODES "${CMAKE_CURRENT_BINARY_DIR}/${SOURCE}.bc")
+endforeach()
+
 
 add_custom_target("rtdevlib-bitcodes" DEPENDS ${RTDEVLIB_BITCODES})
 
@@ -183,19 +206,42 @@ function(embed_spirv_in_cpp
   # Name of the intermediate SPIR-V binary. The name of the C array will be
   # based on this filepath (with punctuation replaced with "_").
   set(SPIR_BINARY ${SOURCE_BASENAME}.spv)
-  add_custom_command(
-    OUTPUT "${OUTPUT_SOURCE}" "${OUTPUT_HEADER}"
-    DEPENDS "${BC_SOURCE}"
-    BYPRODUCTS "${SPIR_BINARY}"
-    COMMAND "${LLVM_SPIRV}"
-    --spirv-ext=${SPIRV_EXTENSIONS}
-    --spirv-max-version=${MAX_SPIRV_VERSION}
-    "${BC_SOURCE}" -o "${SPIR_BINARY}"
-    COMMAND ${CMAKE_SOURCE_DIR}/scripts/embed-binary-in-cpp.bash
-    ${ARRAY_NAME} ${SPIR_BINARY} ${OUTPUT_SOURCE} ${OUTPUT_HEADER}
-    COMMENT "Generating embedded SPIR-V binary: ${OUTPUT_SOURCE}"
-    VERBATIM
-  )
+  # Use the in-tree LLVM SPIR-V backend via clang for LLVM >= 22,
+  # or the external llvm-spirv translator for older LLVM versions.
+  # The in-tree backend ensures structural compatibility between rtdevlib
+  # modules and user device programs compiled with the same backend.
+  if(LLVM_VERSION_MAJOR GREATER_EQUAL 22)
+    # In-tree SPIR-V backend via clang
+    add_custom_command(
+      OUTPUT "${OUTPUT_SOURCE}" "${OUTPUT_HEADER}"
+      DEPENDS "${BC_SOURCE}"
+      BYPRODUCTS "${SPIR_BINARY}"
+      COMMAND "${CMAKE_CXX_COMPILER}"
+      --target=spirv64v${MAX_SPIRV_VERSION}-unknown-chipstar
+      -mllvm -spirv-ext=${SPIRV_EXTENSIONS}
+      -x ir
+      "${BC_SOURCE}" -o "${SPIR_BINARY}"
+      COMMAND ${CMAKE_SOURCE_DIR}/scripts/embed-binary-in-cpp.bash
+      ${ARRAY_NAME} ${SPIR_BINARY} ${OUTPUT_SOURCE} ${OUTPUT_HEADER}
+      COMMENT "Generating embedded SPIR-V binary (in-tree backend): ${OUTPUT_SOURCE}"
+      VERBATIM
+    )
+  else()
+    # External llvm-spirv translator
+    add_custom_command(
+      OUTPUT "${OUTPUT_SOURCE}" "${OUTPUT_HEADER}"
+      DEPENDS "${BC_SOURCE}"
+      BYPRODUCTS "${SPIR_BINARY}"
+      COMMAND "${LLVM_SPIRV}"
+      --spirv-ext=${SPIRV_EXTENSIONS}
+      --spirv-max-version=${MAX_SPIRV_VERSION}
+      "${BC_SOURCE}" -o "${SPIR_BINARY}"
+      COMMAND ${CMAKE_SOURCE_DIR}/scripts/embed-binary-in-cpp.bash
+      ${ARRAY_NAME} ${SPIR_BINARY} ${OUTPUT_SOURCE} ${OUTPUT_HEADER}
+      COMMENT "Generating embedded SPIR-V binary (llvm-spirv): ${OUTPUT_SOURCE}"
+      VERBATIM
+    )
+  endif()
 endfunction()
 
 foreach(SOURCE IN LISTS RTDEVLIB_SOURCES_v1_2)
