Fix hipPromoteInt-ext-repro: translator path + native promote-int test
- CI: Don't build native SPIR-V target for translator variant (remove
  LLVM_EXPERIMENTAL_TARGETS_TO_BUILD=SPIRV). Translator uses
  SPIRV-LLVM-Translator (llvm-spirv) only; native uses integrated backend.
- run_promote_int_pass.bash: Add -mllvm -spirv-ext for integrated backend
  path so intel_sub_group_shuffle (SPV_INTEL_subgroups) works in native build.

--- a/.github/workflows/check-unit-tests-llvm22.yml
+++ b/.github/workflows/check-unit-tests-llvm22.yml
@@ -62,9 +62,9 @@ jobs:
           cd "$BUILD_DIR"
 
           if [ "${{ matrix.variant }}" = "translator" ]; then
+            # Translator: SPIRV-LLVM-Translator (llvm-spirv) only; no native SPIR-V backend.
             cmake .. \
               -DLLVM_TARGETS_TO_BUILD="host" \
-              -DLLVM_EXPERIMENTAL_TARGETS_TO_BUILD="SPIRV" \
               -DLLVM_ENABLE_PROJECTS="clang;openmp;clang-tools-extra" \
               -DCMAKE_BUILD_TYPE=Release \
               -DLLVM_ENABLE_ASSERTIONS=On
