Add CI failure diagnostics and artifact uploads for debugging
- Intel workflow: diagnostic step shows failed configs/tests and whether
  Unit_printf_specifier is in OPENCL_CPU exclusions; upload make_check_result
  and test_lists as artifacts on failure
- Presubmit: fix artifact path (LastTest.log not always present), upload
  build/Testing/ and build/test_lists/

--- a/.github/workflows/presubmit.yml
+++ b/.github/workflows/presubmit.yml
@@ -286,4 +286,6 @@ jobs:
         if: failure()
         with: 
           name: build-and-check-${{ matrix.backend }}-pocl-${{ matrix.pocl-version }}-llvm-${{ matrix.llvm-version }}
-          path: build/Testing/Temporary/LastTest.log
+          path: |
+            build/Testing/
+            build/test_lists/
