ROCm-Device-Libs: use dynamic datalayout from clang
Switch to 0148370 approach: omit hardcoded datalayout/triple in .ll files,
query clang -target spirv64 at configure to get datalayout. Robust across
LLVM versions (19, 22, chipStar fork). Set AMDGPU_TARGET_TRIPLE=spirv64 for
chipStar OpenCL path.

--- a/bitcode/CMakeLists.txt
+++ b/bitcode/CMakeLists.txt
@@ -79,6 +79,7 @@ endforeach()
 
 # required by ROCm-Device-Libs
 set(ROCM_DEVICELIB_STANDALONE_BUILD ON)
+set(AMDGPU_TARGET_TRIPLE "spirv64" CACHE STRING "Target triple for ROCm device libs")
 
 set(SAVED_WARN_DEPRECATED ${CMAKE_WARN_DEPRECATED})
 set(CMAKE_WARN_DEPRECATED OFF)
